Allow to process correctly css

--- a/static_web/nginx.conf
+++ b/static_web/nginx.conf
@@ -4,6 +4,8 @@ http {
     server {
         listen 80;  # Port où Nginx écoutera les requêtes HTTP
 
+        include mime.types;
+
         location / {
             root /usr/share/nginx/html;  # Chemin vers le répertoire du contenu statique
             index index.html;  # Fichier par défaut à servir s'il est présent
