--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,6 @@ services:
     ports:
       - "1234:80"
     volumes:
-      - ./love:/usr/share/nginx/html
+      - ./serveur:/usr/share/nginx/htm
+    deploy:
+      replicas: 1
