--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ch.heig.dai</groupId>
-    <artifactId>ch.heig.dai</artifactId>
+    <groupId>src.main.ch.heig.dai</groupId>
+    <artifactId>src.main.ch.heig.dai</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
@@ -25,7 +25,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>ch.heig.dai.Main</mainClass>
+                            <mainClass>src.main.ch.heig.dai.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
