--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,29 +2,41 @@ version: '3'
 services:
   web:
     build: ./static_web
-    expose:
-      - "80"
-    volumes:
-      - ./serveur:/usr/share/nginx/htm
     deploy:
-      replicas: 1
+      replicas: 3
     labels:
       - "traefik.enable=true"  # Activation de Traefik pour ce service web
       - "traefik.http.routers.static-web.rule=Host(`localhost`)"  # Route pour le serveur web statique
       - "traefik.http.services.static-web.loadbalancer.server.port=80" # Port du serveur web statique
+      
+  constellation-api:
+    build: ./api
+    deploy:
+      mode: replicated
+      replicas: 4
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.constellation_api.rule=Host(`localhost`) && PathPrefix(`/api`)"
+      - "traefik.http.middlewares.constellation_api_stripprefix.stripprefix.prefixes=/api"
+      - "traefik.http.routers.constellation_api.middlewares=constellation_api_stripprefix"
+      - "traefik.http.services.constellation_api.loadbalancer.server.port=8000"
+
+      ## Sticky session
+      - "traefik.http.services.constellation_api.loadbalancer.sticky.cookie=true"
+      - "traefik.http.services.constellation_api.loadbalancer.sticky.cookie.name=constellation_api"
+      #- "traefik.http.services.constellation_api.loadbalancer.sticky.cookie.secure=true" # For HTTPS
+
 
   reverse_proxy:
-    image: traefik:v2.6  # Utilisation de l'image Docker de Traefik
+    image: traefik:v2.10  # Utilisation de l'image Docker de Traefik
     command:
       - "--api.insecure=true"  # Activation du tableau de bord (ne pas utiliser en production)
       - "--providers.docker=true" # Activation du provider Docker
       - "--providers.docker.exposedbydefault=false" # Ne pas exposer automatiquement les services
       - "--entrypoints.web.address=:80" # Configuration de l'entrée sur le port 80
+      - "--accesslog=true"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    ports:
-      - "80:80" # Mapping du port 80 du conteneur Traefik au port 80 de l'hôte
-      - "8080:8080" # Accès au dashboard de Traefik
-
-
-
+    ports: # Mapping des ports du conteneur au ports  de l'hôte
+      - "80:80" # Port HTTP
+      - "8080:8080" # Dashboard de Traefik
